--- a/assets/styles/_main-page.scss
+++ b/assets/styles/_main-page.scss
@@ -2,7 +2,7 @@
 
 
 
-#name{
+#game-section{
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -26,3 +26,8 @@
   text-align: center;
 }
 
+#old-man{
+  padding-top: 50px;
+  width: 150px;
+  height: auto;
+}
