--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -11,10 +11,15 @@
   text-shadow: 1.5px 1.5px  $secondary-colors;
 }
 
-h1{
+h1, h2{
   text-align: center;
   padding-top: 50px;
 }
+
+#welcome{
+  text-align: center;
+}
+
 
 
 
