Added Objects and image

--- a/assets/styles/_main-page.scss
+++ b/assets/styles/_main-page.scss
@@ -27,7 +27,8 @@
 }
 
 #old-man{
-  padding-top: 50px;
-  width: 150px;
+  margin-top: 20px;
+  width: 200px;
   height: auto;
+  border-radius: 50%;
 }
