--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ button {
 
 h1, h2 {
   text-align: center;
-  padding-top: 50px;
+  padding-top: 25px;
 }
 
 #welcome {
@@ -57,7 +57,8 @@ h1, h2 {
 }
 
 #old-man {
-  padding-top: 50px;
-  width: 150px;
+  margin-top: 20px;
+  width: 200px;
   height: auto;
+  border-radius: 50%;
 }
