--- a/assets/styles/_buttons.scss
+++ b/assets/styles/_buttons.scss
@@ -1,15 +1,21 @@
 @import "_variables";
 
-#btn{
+.btn{
   display: flex;
   justify-content: center;
   flex-direction: row;
-  
 }
 button{
   border-radius:15px;
   margin: 5px;
   padding: 5px;
   background-color: $secondary-colors;
-  font-size: 1.3rem;
+  font-size: 1rem;
+}
+
+#btn-music{
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
