--- a/assets/styles/_main-page.scss
+++ b/assets/styles/_main-page.scss
@@ -26,9 +26,17 @@
   text-align: center;
 }
 
-#old-man{
+#story-img{
   margin-top: 20px;
   width: 200px;
   height: auto;
   border-radius: 50%;
+}
+
+@media only screen and (min-width: 768px) {
+  #story-img{
+    margin-top: 20px;
+    width: 350px;
+    height: auto;
+  }
 }
